[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/component_view/src/CategoryList.gd" type="Script" id=1]
[ext_resource path="res://addons/component_view/src/panel/AddToSceneButton.gd" type="Script" id=2]
[ext_resource path="res://addons/component_view/src/panel/loader/ObjLoader.gd" type="Script" id=4]
[ext_resource path="res://addons/component_view/src/panel/ComponentView.gd" type="Script" id=5]
[ext_resource path="res://addons/component_view/src/panel/loader/SceneLoader.gd" type="Script" id=6]
[ext_resource path="res://addons/component_view/src/panel/SearchText.gd" type="Script" id=7]
[ext_resource path="res://addons/component_view/src/panel/Loaders.gd" type="Script" id=8]
[ext_resource path="res://addons/component_view/src/panel/loader/GLTFSceneLoader.gd" type="Script" id=9]
[ext_resource path="res://addons/component_view/src/panel/loader/GLBSceneLoader.gd" type="Script" id=10]

[node name="Components" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
script = ExtResource( 5 )

[node name="Loaders" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 8 )

[node name="SceneLoader" type="Node" parent="Loaders"]
script = ExtResource( 6 )

[node name="GLTFLoader" type="Node" parent="Loaders"]
script = ExtResource( 9 )

[node name="GLBLoader" type="Node" parent="Loaders"]
script = ExtResource( 10 )

[node name="ObjLoader" type="Node" parent="Loaders"]
script = ExtResource( 4 )

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_right = 200.0
margin_bottom = 600.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
margin_right = 200.0
margin_bottom = 20.0

[node name="AddToSceneButton" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 96.0
margin_bottom = 20.0
text = "Add to scene"
script = ExtResource( 2 )

[node name="UpdateCategoriesButton" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Update"

[node name="SearchText" type="LineEdit" parent="VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 200.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.62
script = ExtResource( 7 )

[node name="Control" type="Control" parent="VBoxContainer2/VBoxContainer"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CategoryList" type="ItemList" parent="VBoxContainer2/VBoxContainer/Control"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
allow_reselect = true
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2"]
margin_left = 204.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemsRootContainer" type="VBoxContainer" parent="VBoxContainer2/ScrollContainer"]
unique_name_in_owner = true
margin_right = 820.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/HBoxContainer/AddToSceneButton" to="VBoxContainer2/VBoxContainer/HBoxContainer/AddToSceneButton" method="_on_AddToSceneButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/HBoxContainer/UpdateCategoriesButton" to="." method="reload"]
[connection signal="text_changed" from="VBoxContainer2/VBoxContainer/SearchText" to="VBoxContainer2/VBoxContainer/SearchText" method="_on_SearchText_text_changed"]
